2009-02-04  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* socklinger.c (conf_set_time): added
	(process_args): Options -p and -u added
	(drop_privileges): added, notes privilege dropping errors
	(main): in case of -c without -b drop privileges early

2007-05-08    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): better lingering and shutdown now
	from tinolib
	(vnote): added to better generalize routines
	(socklinger_error): moved to top

2007-04-29    <tino@firebird.03.softkill.net>

	* socklinger.c (main): SIGCHLD now is delivered to the process and
	more commandline parameters

2007-04-04    <tino@firebird.03.softkill.net>

	* socklinger.c (process_args): future options prepared

	* example/tester.sh: improved output for tests

	* socklinger.c (socklinger_postfork): cosmetics: again typo in PID
	printing removed (now in waitchild) and SOCKLINGER_NR was 0..n-1,
	correct to 1..n (now based on child_findfree).
	(socklinger_dosock): sleep replaced by tino_relax()
	(socklinger_error): added for support of option -1
	(socklinger_child_findfree, socklinger_waitchild)
	(socklinger_forkchild): added as generalized parts for pre- and
	postfork
	(socklinger_prefork, socklinger_postfork): changed to use new
	routines (which support ignerr)
	(socklinger_forkchild): set dodelay only if delay is active

2007-04-03    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_postfork, socklinger_prefork): delay
	added (now in waitchild())

2007-04-02    <tino@firebird.03.softkill.net>

	* socklinger.c (process_args): delay added

2006-12-12    <tino@firebird.03.softkill.net>

	* BUGS: updated

	* diet: Softlink deleted, no "make static"

	* Makefile.tino: re-created with tino/setuptino.sh

	* example/portcullis.sh: completed (hopefully)

2006-09-16  U-KOSH\Administrator  <Administrator@KOSH>

	* socklinger.c (main): bugfix: if @ was missing (like in IPs), cnt
	was set.

2006-09-08  U-KOSH\Administrator  <Administrator@KOSH>
