@@ -1,3 +1,8 @@
+2009-07-17  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* socklinger.c (process_args, socklinger): PID moved from
+	informational to environment
+
 2009-02-04  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* socklinger.c (conf_set_time): added
